[package]
name = "chords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
itertools = "0.10.5"
js-sys = "0.3.61"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
strum = { version = "0.24.1", features = ["derive"] }
wasm-bindgen = "0.2.84"

[dev-dependencies]
rstest = "0.17.0"

[lib]
crate-type = ["cdylib", "rlib"]
